changed the textSize in the TF and MC xml to be our constant md design size

--- a/app/src/main/res/layout/fragment_multiple_choice_answer.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice_answer.xml
@@ -21,7 +21,7 @@
                 android:layout_height="match_parent"
                 android:onClick="answerClicked"
                 android:text="Choice A"
-                android:textSize="20dp"
+                android:textSize="@dimen/md_text_size_button"
                 />
             <Button
                 android:id="@+id/choiceBButton"
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent"
                 android:onClick="answerClicked"
                 android:text="Choice B"
-                android:textSize="20dp"
+                android:textSize="@dimen/md_text_size_button"
                 />
         </LinearLayout>
 
@@ -46,7 +46,7 @@
                 android:layout_height="match_parent"
                 android:onClick="answerClicked"
                 android:text="Choice C"
-                android:textSize="20dp"
+                android:textSize="@dimen/md_text_size_button"
                 />
             <Button
                 android:id="@+id/choiceDButton"
@@ -55,7 +55,7 @@
                 android:layout_height="match_parent"
                 android:onClick="answerClicked"
                 android:text="Choice D"
-                android:textSize="20dp"
+                android:textSize="@dimen/md_text_size_button"
                 />
         </LinearLayout>
     </LinearLayout>
