--- a/app/src/main/res/layout/fragment_true_false_choice_answer.xml
+++ b/app/src/main/res/layout/fragment_true_false_choice_answer.xml
@@ -15,7 +15,7 @@
             android:layout_height="match_parent"
             android:onClick="answerClicked"
             android:text="True"
-            android:textSize="20dp"
+            android:textSize="@dimen/md_text_size_button"
             />
         <Button
             android:id="@+id/falseButton"
@@ -24,7 +24,7 @@
             android:layout_height="match_parent"
             android:onClick="answerClicked"
             android:text="False"
-            android:textSize="20dp"
+            android:textSize="@dimen/md_text_size_button"
             />
     </LinearLayout>
 
