--- a/app/src/main/res/layout/fragment_true_false_answer.xml
+++ b/app/src/main/res/layout/fragment_true_false_answer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seniordesign.wolfpack.quizinator.Fragments.TrueFalseChoiceAnswerFragment">
+    tools:context="com.seniordesign.wolfpack.quizinator.Fragments.TrueFalseAnswerFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
