fixed tabular layout for answer frags

--- a/app/src/main/res/layout/fragment_multiple_choice_answer.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice_answer.xml
@@ -1,163 +1,57 @@
-<FrameLayout
+<TableLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:stretchColumns="1"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.GamePlayActivity">
-<!--
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:orientation="horizontal"
-        tools:context="com.seniordesign.wolfpack.quizinator.Activities.GamePlayActivity" >
+
+    <TableRow
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_width="match_parent">
 
         <Button
             android:id="@+id/choiceAButton"
-            android:layout_column="0"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:onClick="answerClicked"
             android:text="@string/frag_answer_A"
-            android:textSize="@dimen/md_text_size_game_play_button" />
+            android:textSize="@dimen/md_text_size_button" />
 
         <Button
             android:id="@+id/choiceBButton"
-            android:layout_column="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:onClick="answerClicked"
             android:text="@string/frag_answer_B"
-            android:textSize="@dimen/md_text_size_game_play_button" />
+            android:textSize="@dimen/md_text_size_button" />
+    </TableRow>
+
+    <TableRow
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_width="match_parent">
 
         <Button
             android:id="@+id/choiceCButton"
-            android:layout_column="0"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:onClick="answerClicked"
             android:text="@string/frag_answer_C"
-            android:textSize="@dimen/md_text_size_game_play_button" />
+            android:textSize="@dimen/md_text_size_button" />
 
         <Button
             android:id="@+id/choiceDButton"
-            android:layout_column="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:onClick="answerClicked"
             android:text="@string/frag_answer_D"
-            android:textSize="@dimen/md_text_size_game_play_button" />
-    </GridLayout>
--->
-
-    <TableLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:stretchColumns="1"
-        android:padding="10dp">
-
-        <TableRow
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
-
-            <Button
-                android:id="@+id/choiceAButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_column="0"
-                android:onClick="answerClicked"
-                android:text="@string/frag_answer_A"
-                android:textSize="@dimen/md_text_size_button" />
-
-            <Button
-                android:id="@+id/choiceBButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_column="1"
-                android:onClick="answerClicked"
-                android:text="@string/frag_answer_B"
-                android:textSize="@dimen/md_text_size_button" />
-        </TableRow>
-
-        <TableRow
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
-
-            <Button
-                android:id="@+id/choiceCButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_column="0"
-                android:onClick="answerClicked"
-                android:text="@string/frag_answer_C"
-                android:textSize="@dimen/md_text_size_button" />
-
-            <Button
-                android:id="@+id/choiceDButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_column="1"
-                android:onClick="answerClicked"
-                android:text="@string/frag_answer_D"
-                android:textSize="@dimen/md_text_size_button" />
-        </TableRow>
-
-    </TableLayout>
-
-    <!--
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/choiceAButton"
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:onClick="answerClicked"
-                android:text="@string/frag_answer_A"
-                android:textSize="@dimen/md_text_size_button"
-                />
-            <Button
-                android:id="@+id/choiceBButton"
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:onClick="answerClicked"
-                android:text="@string/frag_answer_B"
-                android:textSize="@dimen/md_text_size_button"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/choiceCButton"
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:onClick="answerClicked"
-                android:text="@string/frag_answer_C"
-                android:textSize="@dimen/md_text_size_button"
-                />
-            <Button
-                android:id="@+id/choiceDButton"
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:onClick="answerClicked"
-                android:text="@string/frag_answer_D"
-                android:textSize="@dimen/md_text_size_button"
-                />
-        </LinearLayout>
-    </LinearLayout>
-
-    -->
-
-</FrameLayout>
+            android:textSize="@dimen/md_text_size_button" />
+    </TableRow>
+</TableLayout>
