--- a/app/src/main/res/layout/fragment_free_response_answer.xml
+++ b/app/src/main/res/layout/fragment_free_response_answer.xml
@@ -2,29 +2,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seniordesign.wolfpack.quizinator.Fragments.MultipleChoiceAnswerFragment">
+    tools:context="com.seniordesign.wolfpack.quizinator.Activities.GamePlayActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <Button
             android:id="@+id/submitButton"
             android:layout_width="match_parent"
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:onClick="answerClicked"
-            android:text="Submit"
-            android:textSize="20sp"
-            />
+            android:text="@string/frag_answer_submit"
+            android:textSize="@dimen/md_text_size_game_play_button" />
+
         <EditText
             android:id="@+id/freeResponseAnswerArea"
             android:layout_width="match_parent"
             android:layout_weight="8"
             android:layout_height="0dp"
-            android:text=""
-            android:textSize="20sp"
-            />
+            android:textSize="@dimen/md_text_size_game_play_button" />
     </LinearLayout>
-
 </FrameLayout>
