--- a/app/src/main/res/layout/fragment_true_false_answer.xml
+++ b/app/src/main/res/layout/fragment_true_false_answer.xml
@@ -1,32 +1,33 @@
-<FrameLayout
+<TableLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seniordesign.wolfpack.quizinator.Fragments.TrueFalseAnswerFragment">
+    android:stretchColumns="1"
+    tools:context="com.seniordesign.wolfpack.quizinator.Activities.GamePlayActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    <TableRow
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_width="match_parent">
+
         <Button
             android:id="@+id/trueButton"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="answerClicked"
-            android:text="True"
-            android:textSize="@dimen/md_text_size_game_play_button"
-            />
+            android:text="@string/_true"
+            android:textSize="@dimen/md_text_size_game_play_button" />
+
         <Button
             android:id="@+id/falseButton"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="answerClicked"
-            android:text="False"
-            android:textSize="@dimen/md_text_size_game_play_button"
-            />
-    </LinearLayout>
-
-</FrameLayout>
+            android:text="@string/_false"
+            android:textSize="@dimen/md_text_size_game_play_button" />
+    </TableRow>
+</TableLayout>
