--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -19,12 +19,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageButton
-                app:srcCompat="@drawable/end_circle"
-                android:id="@+id/end_game_option"
+            <TextView
+                android:id="@+id/gamePlayTimeHostText"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="@android:color/white"
+                android:paddingRight="10dp"
+                android:textSize="20dp"
+                android:text="Game Time: 00:00" />
+
+            <ImageButton
+                app:srcCompat="@drawable/end_circle"
+                android:id="@+id/end_game_option"
+                android:layout_toLeftOf="@id/gamePlayTimeHostText"
+                android:layout_toStartOf="@id/gamePlayTimeHostText"
                 android:padding="5dp"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
@@ -34,17 +46,19 @@
                 android:layout_height="match_parent"
                 android:onClick="endGame"/>
 
-            <TextView
-                android:id="@+id/gamePlayTimeHostText"
+            <ImageButton
+                app:srcCompat="@drawable/ic_players_white_24dp"
+                android:id="@+id/players_button"
                 android:layout_toLeftOf="@id/end_game_option"
                 android:layout_toStartOf="@id/end_game_option"
+                android:padding="5dp"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/end_game"
+                android:background="@null"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textColor="@android:color/white"
-                android:paddingRight="10dp"
-                android:textSize="20dp"
-                android:text="Game Time: 00:00" />
+                android:onClick="showPlayersDialog"/>
 
         </RelativeLayout>
 
