--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -130,12 +130,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/current_card"
-            android:textSize="@dimen/md_text_size_title"/>
+            android:textSize="@dimen/md_text_size_title" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -148,7 +148,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
+                    android:gravity="center_horizontal"
                     android:textSize="@dimen/md_text_size_headline"/>
 
             </ScrollView>
