--- a/app/src/main/res/layout/base_adapter_active_player_item.xml
+++ b/app/src/main/res/layout/base_adapter_active_player_item.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="@dimen/activity_vertical_margin_half"
+    android:paddingBottom="@dimen/activity_vertical_margin_half">
 
     <TextView
         android:id="@+id/active_player_name"
