Changed accent color, finished up edit deck buttons, changed nav bar gradient

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="135"
         android:centerColor="#003355"
-        android:endColor="#dd6000"
+        android:endColor="#3d8fff"
         android:startColor="#000000"
         android:type="linear" />
 </shape>
