--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -59,8 +59,9 @@
                 android:id="@+id/questionTextArea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textAlignment="center"/>
+                android:textSize="@dimen/md_text_size_headline"
+                android:textAlignment="center"
+                android:layout_gravity="center"/>
 
         </FrameLayout>
 
