--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -40,17 +40,20 @@
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:layout_height="0dp">
+
         <ListView
             android:id="@+id/cards_in_deck"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent"
+            android:divider="@null"/>
 
         <ListView
             android:id="@+id/cards_in_database"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent"
+            android:divider="@null"/>
     </LinearLayout>
 
     <RelativeLayout
