updated edit deck and the deck activity to handle long deck names

--- a/app/src/main/res/layout/array_adapter_list_of_decks.xml
+++ b/app/src/main/res/layout/array_adapter_list_of_decks.xml
@@ -14,15 +14,19 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.2"
             android:text="@string/deck_name"
             android:textSize="16sp"
             android:textColor="#000000"
-            android:id="@+id/array_adapter_deck_name" />
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:id="@+id/array_adapter_deck_name"
+            android:paddingLeft="0dp"
+            android:paddingRight="5dp" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.8"
             android:text="@string/deck_size"
             android:textSize="16sp"
             android:textColor="#000000"
