--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -21,7 +21,9 @@
             android:textSize="16sp"
             android:textColor="#000000"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:inputType="text" />
         <TextView
             android:layout_weight="0.5"
             android:textAlignment="center"
