added a max length for the deck name... will need to look over and implement elsewhere especially for importing decks and the like

--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="2"
+            android:maxLength="140"
             android:inputType="text" />
         <TextView
             android:layout_weight="0.5"
