--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -49,14 +49,16 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:divider="@null"/>
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/array_adapter_padding"/>
 
         <ListView
             android:id="@+id/cards_in_database"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:divider="@null"/>
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/array_adapter_padding"/>
     </LinearLayout>
 
     <RelativeLayout
