--- a/app/src/main/res/layout/fragment_true_false_answer.xml
+++ b/app/src/main/res/layout/fragment_true_false_answer.xml
@@ -18,6 +18,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="answerClicked"
+            android:textAllCaps="true"
             android:text="@string/_true"
             android:textSize="@dimen/md_text_size_game_play_button" />
 
@@ -27,6 +28,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="answerClicked"
+            android:textAllCaps="true"
             android:text="@string/_false"
             android:textSize="@dimen/md_text_size_game_play_button" />
     </TableRow>
