--- a/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.MainMenuActivity">
+    tools:context="com.seniordesign.wolfpack.quizinator.activities.MainMenuActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
