--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -5,7 +5,7 @@
                 android:id="@+id/activity_cards"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="com.seniordesign.wolfpack.quizinator.Activities.CardsActivity">
+                tools:context="com.seniordesign.wolfpack.quizinator.activities.CardsActivity">
     <LinearLayout
         android:id="@+id/activity_card_creation"
         android:layout_width="match_parent"
