--- a/app/src/main/res/layout/activity_decks.xml
+++ b/app/src/main/res/layout/activity_decks.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_decks"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.DecksActivity">
+    tools:context="com.seniordesign.wolfpack.quizinator.activities.DecksActivity">
     
     <ListView
         android:id="@+id/list_of_decks"
