--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.GamePlayActivity">
+    tools:context="com.seniordesign.wolfpack.quizinator.activities.GamePlayActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
