--- a/app/src/main/res/layout/activity_host_game.xml
+++ b/app/src/main/res/layout/activity_host_game.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.HostGameActivity">
+    tools:context="com.seniordesign.wolfpack.quizinator.activities.HostGameActivity">
 
     <LinearLayout
         android:id="@+id/buttonsPanel"
@@ -36,7 +36,7 @@
     </LinearLayout>
 
     <fragment
-        class="com.seniordesign.wolfpack.quizinator.Fragments.PeerListFragment"
+        class="com.seniordesign.wolfpack.quizinator.fragments.PeerListFragment"
         android:id="@+id/frag_peer_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
