--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.ManageGameplayActivity">
+    tools:context="com.seniordesign.wolfpack.quizinator.activities.ManageGameplayActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
