--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.MainMenuActivity"
+    tools:context="com.seniordesign.wolfpack.quizinator.activities.MainMenuActivity"
     tools:showIn="@layout/app_bar_navigation_drawer">
 
 
