--- a/app/src/main/res/layout/fragment_true_false_answer.xml
+++ b/app/src/main/res/layout/fragment_true_false_answer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:stretchColumns="1"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.GamePlayActivity">
+    tools:context="com.seniordesign.wolfpack.quizinator.activities.GamePlayActivity">
 
     <TableRow
         android:layout_height="0dp"
